# SwapCampus

./: .gitignore  CLAUDE.md  README.md  deploy.bat  skills-lock.json
backend/: .env.example  conftest.py  manage.py  pyproject.toml
backend/apps/admin_panel/: actions.py  admin.py  apps.py  urls.py  views.py
backend/apps/admin_panel/tests/: test_admin_panel.py
backend/apps/chat/: admin.py  apps.py  consumers.py  models.py  serializers.py  urls.py  views.py
backend/apps/chat/migrations/: 0001_initial.py  0002_initial.py  0003_message_image_alter_message_content.py
backend/apps/chat/tests/: __init__.py  test_chat.py
backend/apps/products/: admin.py  apps.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/products/migrations/: 0001_initial.py  0002_initial.py  0004_product_status_add_pending.py  0005_add_banned_status.py  0006_product_reject_reason.py  0007_comment.py
backend/apps/products/tests/: conftest.py  test_products.py
backend/apps/transactions/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/transactions/migrations/: 0001_initial.py  0002_initial.py  0003_review_image.py  0004_review_count_and_time_limit.py
backend/apps/users/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/config/: __init__.py  asgi.py  routing.py  settings.py  urls.py  wsgi.py
backend/core/: exceptions.py  middleware.py  models.py  pagination.py  permissions.py  utils.py
backend/requirements/: base.txt  dev.txt  prod.txt
docker/: Dockerfile.backend  (+3 more)
(+73 files in other folders)
