[project]
name = "swapcampus-backend"
version = "0.1.0"
description = "SwapCampus 北京林业大学校园闲置物品交易平台 - 后端"
requires-python = ">=3.12"

# ── Ruff (Lint + Formatter) ───────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # 行长度交给 formatter 处理

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ── Pytest ───────────────────────────────────────────────
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["apps"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]

# ── Coverage ─────────────────────────────────────────────
[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*", "manage.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
